fix: replace url

--- a/404.html
+++ b/404.html
@@ -12,6 +12,7 @@
 
       if (window.location.hostname === oldDomain) {
         var newUrl = 'https://' + newDomain + currentPath;
+        window.location.replace(newUrl);
       }
     }
 
