feat: migrate to asukawang.com

--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
     <title>redirecting</title>
     <script>
     function redirect() {
-      var oldDomain = 'asukawang.com';
-      var newDomain = 'asukachikaru.com';
+      var oldDomain = 'asukachikaru.com';
+      var newDomain = 'asukawang.com';
       var currentPath = window.location.pathname;
 
       if (window.location.hostname === oldDomain) {
